crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__continuation_misuse.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/continuation_misuse.em
---
[E3002] Error: `k` must be used exactly once, but it is used more than once
   ╭─[ check-fail/linearity/continuation_misuse.em:8:25 ]
   │
 8 │     | ask () k -> k 1 + k 2
   │                   ┬     ┬  
   │                   ╰──────── first used here
   │                         │  
   │                         ╰── used again here
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
