crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__continuation_not_handled.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/continuation_not_handled.em
---
[E3005] Error: the continuation `k` of a `once` operation must be called or dropped
   ╭─[ check-fail/linearity/continuation_not_handled.em:9:7 ]
   │
 9 │       | ask () k -> 0
   │       ───────┬─┬─────  
   │              ╰───────── this clause
   │                │       
   │                ╰─────── `k` is bound here
   │ 
   │ Help: call `k` or `drop k` on every path
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
