crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__file_closed_twice.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/file_closed_twice.em
---
[E3002] Error: `f` must be used exactly once, but it is used more than once
   ╭─[ check-fail/linearity/file_closed_twice.em:6:12 ]
   │
 6 │   Fs.close f
   │            ┬  
   │            ╰── used again here
   │
   ├─[ check-fail/linearity/file_closed_twice.em:6:12 ]
   │
 5 │   Fs.close f
   │            ┬  
   │            ╰── first used here
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
