crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__file_discarded.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/file_discarded.em
---
[E3004] Error: a linear value cannot be discarded with `_`
   ╭─[ check-fail/linearity/file_discarded.em:4:8 ]
   │
 4 │   let (_, text) = Fs.read_all (Fs.open "input.txt")
   │        ┬  
   │        ╰── this pattern discards it
   │ 
   │ Help: bind it to a name and pass the name to `drop`
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
