crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__file_never_closed.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/file_never_closed.em
---
[E3003] Error: `f` must be used exactly once, but it is not used
   ╭─[ check-fail/linearity/file_never_closed.em:4:7 ]
   │
 4 │   let f = Fs.open "input.txt"
   │       ┬  
   │       ╰── `f` is bound here
 5 │   println "forgot"
   │                   │ 
   │                   ╰─ `f` is not used before the end of this scope
   │ 
   │ Help: pass `f` to `drop`
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
