crates/eml_cli/tests/snapshots/integration__ui__check_fail@linearity__file_shadowed.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: rendered
input_file: tests/ui/check-fail/linearity/file_shadowed.em
---
[E3003] Error: `f` must be used exactly once, but it is not used
   ╭─[ check-fail/linearity/file_shadowed.em:4:7 ]
   │
 4 │   let f = Fs.open "a.txt"
   │       ┬  
   │       ╰── `f` is bound here
 5 │   let f = Fs.open "b.txt"
   │       ┬  
   │       ╰── `f` is shadowed here
   │ 
   │ Help: pass `f` to `drop` before it is shadowed
   │ 
   │ Note: linear values, such as files, the continuation of a `once` operation and closures that capture one, must be used exactly once
───╯
